--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="back-video">
-    <video autoplay loop   src="back.mp4"></video></div>
+    <video autoplay loop muted playsinline src="back.mp4"></video></div>
     <div class="navBar">
         <div class="logo">
         </div>
